Integración de cambios de Daniela

--- a/baseball/webroot/baseball/actualizar.html
+++ b/baseball/webroot/baseball/actualizar.html
@@ -28,11 +28,28 @@
                                                         <h2 class="hidden">Indice</h2>
                                                 </div>
                                                 <div id="description">
+                                                        <center>
+                                                                <div class="menu_elem">
+                                                                        <a href="actualizar_jugador.php" class="link_hide">Actualizar Jugador</a>
+                                                                </div>
+
+                                                                <div class="menu_elem">
+                                                                        <a href="actualizar_estadio.php" class="link_hide">Actualizar Estadio</a>
+                                                                </div>
+
+                                                                <div class="menu_elem">
+                                                                        <a href="actualizar_equipo.php" class="link_hide">Actualizar Equipo</a>
+                                                                </div>
+
+                                                                <div class="menu_elem">
+                                                                        <a href="actualizar_juego.php" class="link_hide">Actualizar Juego</a>
+                                                                </div>
+                                                        </center>
                                                 </div>
                                         </div>
                                         <div id="content-right">
                                                 <div id="main">
-                                                        <p>Main text</p>
+
                                                 </div>
                                         </div>
                                 </div>
