--- a/baseball/webroot/baseball/consultar.html
+++ b/baseball/webroot/baseball/consultar.html
@@ -27,12 +27,26 @@
                                                 <div id="title">
                                                         <h2 class="hidden">Indice</h2>
                                                 </div>
-                                                <div id="description">
-                                                </div>
+                                                <center>
+                                                        <div id="description" >
+
+                                                                <div class="menu_elem">
+                                                                        <a href="consultar_equipo.php" class="link_hide">Por Equipo</a>
+                                                                </div>
+
+                                                                <div class="menu_elem">
+                                                                        <a href="consultar_juego.php" class="link_hide">Por Juego</a>
+                                                                </div>
+
+                                                                <div class="menu_elem">
+                                                                        <a href="consultar_estadio.php" class="link_hide">Por Estadio</a>
+                                                                </div>
+                                                        </div>
+                                                </center>
                                         </div>
                                         <div id="content-right">
                                                 <div id="main">
-                                                        <p>Main text</p>
+
                                                 </div>
                                         </div>
                                 </div>
