--- a/baseball/webroot/baseball/eliminar.html
+++ b/baseball/webroot/baseball/eliminar.html
@@ -28,11 +28,28 @@
                                                         <h2 class="hidden">Indice</h2>
                                                 </div>
                                                 <div id="description">
+                                                        <center>
+                                                                <div class="menu_elem">
+                                                                        <a href="eliminar_jugador.php" class="link_hide">Eliminar Jugador</a>
+                                                                </div>
+
+                                                                <div class="menu_elem">
+                                                                        <a href="eliminar_estadio.php" class="link_hide">Eliminar Estadio</a>
+                                                                </div>
+
+                                                                <div class="menu_elem">
+                                                                        <a href="eliminar_equipo.php" class="link_hide">Eliminar Equipo</a>
+                                                                </div>
+
+                                                                <div class="menu_elem">
+                                                                        <a href="eliminar_juego.php" class="link_hide">Eliminar Juego</a>
+                                                                </div>
+                                                        </center>
                                                 </div>
                                         </div>
                                         <div id="content-right">
                                                 <div id="main">
-                                                        <p>Main text</p>
+
                                                 </div>
                                         </div>
                                 </div>
