--- a/baseball/webroot/baseball/insertar.html
+++ b/baseball/webroot/baseball/insertar.html
@@ -28,11 +28,29 @@
                                                         <h2 class="hidden">Indice</h2>
                                                 </div>
                                                 <div id="description">
+                                                        <center>
+                                                                <div class="menu_elem">
+                                                                        <a href="insertar_jugador.php" class="link_hide">Nuevo Jugador</a>
+                                                                </div>
+
+                                                                <div class="menu_elem">
+                                                                        <a href="insertar_estadio.php" class="link_hide">Nuevo Estadio</a>
+                                                                </div>
+
+                                                                <div class="menu_elem">
+                                                                        <a href="insertar_equipo.php" class="link_hide">Nuevo Equipo</a>
+                                                                </div>
+
+                                                                <div class="menu_elem">
+                                                                        <a href="insertar_juego.php" class="link_hide">Nuevo Juego</a>
+                                                                </div>
+                                                        </center>
+
                                                 </div>
                                         </div>
                                         <div id="content-right">
                                                 <div id="main">
-                                                        <p>Main text</p>
+
                                                 </div>
                                         </div>
                                 </div>
